# swagger_server/models/__init__.py
@@ -4,12 +4,16 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.access_info import AccessInfo
+from swagger_server.models.coin_info import CoinInfo
 from swagger_server.models.coin_trade_info import CoinTradeInfo
+from swagger_server.models.coins_request import CoinsRequest
+from swagger_server.models.coins_response import CoinsResponse
 from swagger_server.models.common_response import CommonResponse
+from swagger_server.models.configure_trade_request import ConfigureTradeRequest
+from swagger_server.models.configure_trade_response import ConfigureTradeResponse
 from swagger_server.models.exchange_info import ExchangeInfo
 from swagger_server.models.exchange_request import ExchangeRequest
+from swagger_server.models.exchanges_response import ExchangesResponse
 from swagger_server.models.login_request import LoginRequest
 from swagger_server.models.login_response import LoginResponse
-from swagger_server.models.trade_request import TradeRequest
-from swagger_server.models.trade_response import TradeResponse
 from swagger_server.models.user_info import UserInfo
