# swagger_server/models/coins_request.py
@@ -1,0 +1,66 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class CoinsRequest(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, exchange_code: str=None):  # noqa: E501
+        """CoinsRequest - a model defined in Swagger
+
+        :param exchange_code: The exchange_code of this CoinsRequest.  # noqa: E501
+        :type exchange_code: str
+        """
+        self.swagger_types = {
+            'exchange_code': str
+        }
+
+        self.attribute_map = {
+            'exchange_code': 'exchange_code'
+        }
+
+        self._exchange_code = exchange_code
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'CoinsRequest':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The CoinsRequest of this CoinsRequest.  # noqa: E501
+        :rtype: CoinsRequest
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def exchange_code(self) -> str:
+        """Gets the exchange_code of this CoinsRequest.
+
+        exchange code  # noqa: E501
+
+        :return: The exchange_code of this CoinsRequest.
+        :rtype: str
+        """
+        return self._exchange_code
+
+    @exchange_code.setter
+    def exchange_code(self, exchange_code: str):
+        """Sets the exchange_code of this CoinsRequest.
+
+        exchange code  # noqa: E501
+
+        :param exchange_code: The exchange_code of this CoinsRequest.
+        :type exchange_code: str
+        """
+
+        self._exchange_code = exchange_code
