# swagger_server/models/configure_trade_response.py
@@ -1,0 +1,179 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.exchange_info import ExchangeInfo
+from swagger_server import util
+
+
+class ConfigureTradeResponse(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, coin: str=None, primary_exchange: ExchangeInfo=None, secondary_exchange: ExchangeInfo=None, limit: int=None, simulated: int=None):  # noqa: E501
+        """ConfigureTradeResponse - a model defined in Swagger
+
+        :param coin: The coin of this ConfigureTradeResponse.  # noqa: E501
+        :type coin: str
+        :param primary_exchange: The primary_exchange of this ConfigureTradeResponse.  # noqa: E501
+        :type primary_exchange: ExchangeInfo
+        :param secondary_exchange: The secondary_exchange of this ConfigureTradeResponse.  # noqa: E501
+        :type secondary_exchange: ExchangeInfo
+        :param limit: The limit of this ConfigureTradeResponse.  # noqa: E501
+        :type limit: int
+        :param simulated: The simulated of this ConfigureTradeResponse.  # noqa: E501
+        :type simulated: int
+        """
+        self.swagger_types = {
+            'coin': str,
+            'primary_exchange': ExchangeInfo,
+            'secondary_exchange': ExchangeInfo,
+            'limit': int,
+            'simulated': int
+        }
+
+        self.attribute_map = {
+            'coin': 'coin',
+            'primary_exchange': 'primary_exchange',
+            'secondary_exchange': 'secondary_exchange',
+            'limit': 'limit',
+            'simulated': 'simulated'
+        }
+
+        self._coin = coin
+        self._primary_exchange = primary_exchange
+        self._secondary_exchange = secondary_exchange
+        self._limit = limit
+        self._simulated = simulated
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ConfigureTradeResponse':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ConfigureTradeResponse of this ConfigureTradeResponse.  # noqa: E501
+        :rtype: ConfigureTradeResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def coin(self) -> str:
+        """Gets the coin of this ConfigureTradeResponse.
+
+        coin trade  # noqa: E501
+
+        :return: The coin of this ConfigureTradeResponse.
+        :rtype: str
+        """
+        return self._coin
+
+    @coin.setter
+    def coin(self, coin: str):
+        """Sets the coin of this ConfigureTradeResponse.
+
+        coin trade  # noqa: E501
+
+        :param coin: The coin of this ConfigureTradeResponse.
+        :type coin: str
+        """
+
+        self._coin = coin
+
+    @property
+    def primary_exchange(self) -> ExchangeInfo:
+        """Gets the primary_exchange of this ConfigureTradeResponse.
+
+        Exchange primary  # noqa: E501
+
+        :return: The primary_exchange of this ConfigureTradeResponse.
+        :rtype: ExchangeInfo
+        """
+        return self._primary_exchange
+
+    @primary_exchange.setter
+    def primary_exchange(self, primary_exchange: ExchangeInfo):
+        """Sets the primary_exchange of this ConfigureTradeResponse.
+
+        Exchange primary  # noqa: E501
+
+        :param primary_exchange: The primary_exchange of this ConfigureTradeResponse.
+        :type primary_exchange: ExchangeInfo
+        """
+
+        self._primary_exchange = primary_exchange
+
+    @property
+    def secondary_exchange(self) -> ExchangeInfo:
+        """Gets the secondary_exchange of this ConfigureTradeResponse.
+
+        Exchange secondary  # noqa: E501
+
+        :return: The secondary_exchange of this ConfigureTradeResponse.
+        :rtype: ExchangeInfo
+        """
+        return self._secondary_exchange
+
+    @secondary_exchange.setter
+    def secondary_exchange(self, secondary_exchange: ExchangeInfo):
+        """Sets the secondary_exchange of this ConfigureTradeResponse.
+
+        Exchange secondary  # noqa: E501
+
+        :param secondary_exchange: The secondary_exchange of this ConfigureTradeResponse.
+        :type secondary_exchange: ExchangeInfo
+        """
+
+        self._secondary_exchange = secondary_exchange
+
+    @property
+    def limit(self) -> int:
+        """Gets the limit of this ConfigureTradeResponse.
+
+        Litmit  # noqa: E501
+
+        :return: The limit of this ConfigureTradeResponse.
+        :rtype: int
+        """
+        return self._limit
+
+    @limit.setter
+    def limit(self, limit: int):
+        """Sets the limit of this ConfigureTradeResponse.
+
+        Litmit  # noqa: E501
+
+        :param limit: The limit of this ConfigureTradeResponse.
+        :type limit: int
+        """
+
+        self._limit = limit
+
+    @property
+    def simulated(self) -> int:
+        """Gets the simulated of this ConfigureTradeResponse.
+
+        simulated  # noqa: E501
+
+        :return: The simulated of this ConfigureTradeResponse.
+        :rtype: int
+        """
+        return self._simulated
+
+    @simulated.setter
+    def simulated(self, simulated: int):
+        """Sets the simulated of this ConfigureTradeResponse.
+
+        simulated  # noqa: E501
+
+        :param simulated: The simulated of this ConfigureTradeResponse.
+        :type simulated: int
+        """
+
+        self._simulated = simulated
